fix: h3 letter-spacing

--- a/src/theme/headings/headings.css
+++ b/src/theme/headings/headings.css
@@ -5,3 +5,7 @@ h1 {
 h2 {
   letter-spacing: -0.2rem;
 }
+
+h3 {
+  letter-spacing: -0.1rem;
+}
